--- a/add/index.html
+++ b/add/index.html
@@ -12,5 +12,6 @@
 <p>NEW GIT FOLDER</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet architecto deserunt dignissimos, doloremque eius facere, incidunt, itaque neque nesciunt nobis praesentium repudiandae sequi suscipit tempore totam unde voluptate voluptatem.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet architecto deserunt dignissimos, doloremque eius facere, incidunt, itaque neque nesciunt nobis praesentium repudiandae sequi suscipit tempore totam unde voluptate voluptatem.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet architecto deserunt dignissimos, doloremque eius facere, incidunt, itaque neque nesciunt nobis praesentium repudiandae sequi suscipit tempore totam unde voluptate voluptatem.</p>
 </body>
 </html>
